# rust_betting_cli

./: Cargo.toml  README.md  data.json
src/: data.rs  lib.rs  main.rs  repository.rs  view.rs
