[package]
name = "puller_public_betting"
version = "0.1.0"
edition = "2021"
description = "CLI for organising bets"
license = "The MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
